Added OA/LSOA + variable construction description.

--- a/presentations/leeds.qmd
+++ b/presentations/leeds.qmd
@@ -22,11 +22,23 @@ jupyter: lead_map
   - What do we know about risk factors in Leeds?
 
 # Data Overview
+## Introduction to OAs
+- Output Areas (OAs) are the smallest geographic units within local authority districts used for detailed data reporting.
+- OA adjustments in the 2021 census include merging or splitting 2011 OAs to maintain these thresholds, except in cases like large prisons
+- Around 200 OA boundaries were selectively realined to align with ward boundaries.
+- Leeds contains a total of 2,543 OAs.
+
+## Introduction to LSOAs
+- Lower Layer Support Output Areas (LSOAs) are built from groups of OAs (typically four or five).
+- Designed for consistent and comparable reporting of census data.
+- Each LSOA contains 400-1,200 households and a resident population of 1,000 - 3,000 people.
+- Leeds contains a total of 482 LSOAs.
+
 ## Introduction to MSOAs
-- Middle Layer Super Output Areas are geographic units within local authority districts used for detailed data reporting.
+- Middle Layer Super Output Areas are built from groups of four or five LSOAs.
 - Each MSOA includes 2,000–6,000 households or 5,000–15,000 people.
 - MSOA analysis allows for detailed exploration at a granular level, rather than viewing Leeds as a single unit.
-- Leeds contains a total of 107 MSOAs
+- Leeds contains a total of 107 MSOAs.
 
 ## UK MSOA data
 We collect socioeconomic, demographic, and environmental data at the MSOA level from the following sources:
@@ -105,7 +117,9 @@ fig.show()
 
 ## Housing age variables
 
-We use the UK Stock of properties data to obtain the proportion of houses built in various intervals. We focus on the following variables:
+We use the UK Stock of properties data to obtain the proportion of houses built in various intervals.<br>
+The most granular scale at which this data is collected is the LSOA level.<br>
+We focus on the following variables:
 
 - Proportion of houses built before 1992
 - Proportion of houses built before 1972
@@ -147,6 +161,11 @@ fig.show()
 
 - These are almost guaranteed to have lead paint
 
+## House price data
+- Median house price data is reported by the ONS which uses open data from HM Land Registry, a source of comprehensive record level administrative data on property transactions.
+- This covers transactions within a four-quarter window (one year) and is updated each quarter
+- The most granular level this is reported at is the LSOA level.
+
 ## Distribution of (median) house prices
 
 ```{python}
@@ -161,20 +180,8 @@ fig.show()
 - House prices are highest in the north
 - Median house prices 2017-2021 have tripled since 1995-2000
 
-# Risk factors: Employment
-
-## Primary and secondary sector employment
-
-Primary and secondary sector employment often mean working near industrial sites which use lead as a raw material as part of the production process. (Note: maybe lead roofings for construction. but we dont know much about the construction attribution so I'd maybe leave this out too)
-
-We use the UK 2011 Census to investigate the following jobs and its impact on lead exposure:
-- Proportion Working in Mining (Note: proportions are miniscule, I'd leave this out)
-- Proportion Working in Construction 
-- Proportion Working in Machinery and Plants
-
-
 ## Unemployment and economic inactivity 
-
+- Unemployment rates are taken from the UK census by calculating the proportion of people who are unemployed by the number of economically active individuals aged 16 or over.
 - Higher rates of unemployment and economic inactivity are often found in lower-income areas
 - Residents may have fewer housing options and are likelier to live in older, potentially lead-contaminated buildings.
 
@@ -192,7 +199,8 @@ fig.show()
 
 ## Why Deprivation
 
-- The IMD combines income explores income, employment, educational skills, health, housing, crime and living environment conditions to form a measure of area-level deprivation in the UK.
+- The IMD explores income, employment, educational skills, health, housing, crime and living environment conditions to form a measure of area-level deprivation in the UK.
+- The IMD data is collected at the LSOA level.
 - Aizer (2017), Brulle & Pellow (2006), Bullard (1994) find that more deprived families face greater lead exposure risks, with fewer resources for renovations or relocation.
 - Childhood lead exposure is linked to criminal behaviour and aggression.
 
@@ -207,27 +215,65 @@ The variables used are:
 - IMD Health Disability Score
 - IMD Housing Services Score
 
-# Risk factors: Single parenting
+## Calculation of IMD Income Score
 
-## Single Parent Incidence
+Includes:
+- Out-of-work adults and children in families claiming specific benefits.
+- Working individuals with low earnings satisfying means-tested criteria.
 
-- Single parents rely on a single income and this limits access to safer housing, often resulting in older homes with potential for lead paint.
+Key indicators include adults and children receiving:
+1. Income Support
+2. Income based job seeker's allowance
+3. Income based employment and support allowance
+4. Pension Credit 
 
-- Single parents may have less time to monitor lead hazards at home 
+## Calculation of IMD Health Disability score
+- Measures the risk of premature death and impairment of quality of life due to poor physical or mental health.
+- Does not include behavior or environmental factors predictive of future health deprivation.
 
-- We focus on the **proportion of single parent families** from the UK 2011 census
+Indicators:
+1. Years of potential life lost
+  - Age standardised measure of premature death
+2. Comparative Illness and Disability Ratio
+  - An age and sex-standardized morbidity/disability ratio.
+3. Acute Morbidity
+  - An age and sex-standardized rate of emergency hospital admissions.
+4. Mood and Anxiety Disorders
+  - A composite measure derived from:
+  - Hospital episode data
+  - Prescribing data
+  - Suicide mortality data
 
-## Location of single parents families
+## Calculation of IMD Housing Services Score
+- Measures the physical and financial accessibility of housing and local services by considering geographical and wider barriers.
 
-```{python}
-#| label: single-parents-location
-#| echo: false
+Indicators for geographical barriers:
+- Mean road distance to the closest post office for people living at the LSOA level.
+- Mean road distance to the closest primary school for people living at the LSOA level.
+- Mean road distance to the closest supermarket or general store for people living at the LSOA level.
+- Mean road distance to the closest GP surgery for people living at the LSOA level.
 
-fig = plot_chloropleth("lone_parent_fam_w_kids_prop_2011", merged, "Leeds")
-fig.show()
-```
+Indicators for wider barriers: 
+- The proportion of all households at the LSOA level judged to have insufficient space to meet the household’s needs.
+- The LAD-level rate of acceptances for housing assistance under the homelessness provisions of the 1996 Housing Act, assigned to the constituent LSOA.
+
+
+## Calculation of IMD overall score
+The IMD combines information from the seven domains to produce an overall relative measure of deprivation:
+- Income score (22.5%)
+- Employment deprivation (22.5%)
+- Education, skills and training deprivation (13.5%)
+- Health deprivation and disability (13.5%)
+- Crime (9.3%)
+- Barriers to housing and services (9.3%)
+- Living environment deprivation (9.3%)
 
 # Risk factors: Income and poverty
+
+## Income data
+- Low-income households are more likely to live in older, poorly maintained housing with lead-based paint.
+- Children in families with lower incomes have limited access to safer housing leading to longer exposure periods to lead.
+- Our measure for income uses median household income data that is collected from the UK ONS at the MSOA level.
 
 ## Location of high incomes
 
@@ -241,6 +287,11 @@ fig = plot_chloropleth("median_annual_incomeE", merged, "Leeds")
 fig.update_layout(title="Median annual incomes (estimated)")
 fig.show()
 ```
+
+## Poverty rate data
+- Poverty rate data is collected from the ONS and it reports the proportion of households living below 60% of median income.
+- In order to have comparable poverty rates between different areas in the UK, we consider the poverty rate after adjusting for housing costs.
+- This is reported at the MSOA level.
 
 ## Poverty rate
 ```{python}
@@ -264,7 +315,6 @@ fig.show()
 - Poverty rates are highest towards the center
 
 ## Minority population
-
 - (Wheeler et al. , 2021) find that African Americans face a higher risk of deprivation and lead poisoning in Maryland. 
 - While the structural system in the US differs, as a comparatively poorer population it may well be an at-risk group in the UK.
 
@@ -289,38 +339,6 @@ fig.show()
 
 ```
 - The population of black people is concentrated in the north of the center
-
-# Risk factors: Education
-
-## Parental educational attainment
-
-- Parental education level directly impacts socioeconomic status, affecting housing options and access to resources
-
-- Higher educational attainment may be linked to greater awareness of lead exposure risks, making parents likelier to avoid high risk environments.
-
-## Location of educated parents
-
-```{python}
-#| label: education-location
-#| echo: false
-
-fig = plot_chloropleth("l4_qual_ppl_w_kids_prop_2011", merged, "Leeds")
-fig.update_layout(title="Proportion of people with higher education in Leeds")
-fig.show()
-```
-
-## Location of uneducated parents
-
-```{python}
-#| label: uneducated-location
-#| echo: false
-
-fig = plot_chloropleth("no_qual_ppl_w_kids_prop_2011", merged, "Leeds")
-fig.update_layout(title="Proportion of people with lower education in Leeds")
-fig.show()
-```
-
-- This correlates highly with the poverty map
 
 ## Correlation between education of parents and income
 
@@ -422,3 +440,68 @@ fig.show()
 ```
 
 The MSOAs with the highest risk scores are located in the **north/north-eastern belt** around the center of Leeds.
+
+## Appendix
+
+# Risk factors: Employment
+
+## Primary and secondary sector employment
+
+Primary and secondary sector employment often mean working near industrial sites which use lead as a raw material as part of the production process. (Note: maybe lead roofings for construction. but we dont know much about the construction attribution so I'd maybe leave this out too)
+
+We use the UK 2011 Census to investigate the following jobs and its impact on lead exposure:
+- Proportion Working in Mining (Note: proportions are miniscule, I'd leave this out)
+- Proportion Working in Construction 
+- Proportion Working in Machinery and Plants
+
+# Risk factors: Single parenting
+
+## Single Parent Incidence
+
+- Single parents rely on a single income and this limits access to safer housing, often resulting in older homes with potential for lead paint.
+
+- Single parents may have less time to monitor lead hazards at home 
+
+- We focus on the **proportion of single parent families** from the UK 2011 census
+
+## Location of single parents families
+
+```{python}
+#| label: single-parents-location
+#| echo: false
+
+fig = plot_chloropleth("lone_parent_fam_w_kids_prop_2011", merged, "Leeds")
+fig.show()
+```
+
+# Risk factors: Education
+
+## Parental educational attainment
+
+- Parental education level directly impacts socioeconomic status, affecting housing options and access to resources
+
+- Higher educational attainment may be linked to greater awareness of lead exposure risks, making parents likelier to avoid high risk environments.
+
+## Location of educated parents
+
+```{python}
+#| label: education-location
+#| echo: false
+
+fig = plot_chloropleth("l4_qual_ppl_w_kids_prop_2011", merged, "Leeds")
+fig.update_layout(title="Proportion of people with higher education in Leeds")
+fig.show()
+```
+
+## Location of uneducated parents
+
+```{python}
+#| label: uneducated-location
+#| echo: false
+
+fig = plot_chloropleth("no_qual_ppl_w_kids_prop_2011", merged, "Leeds")
+fig.update_layout(title="Proportion of people with lower education in Leeds")
+fig.show()
+```
+
+- This correlates highly with the poverty map
